# games

./: CMakeLists.txt
game/: CMakeLists.txt
game/lib/src/: 3ds.cpp  3ds.h  CMakeLists.txt  camera.cpp  camera.h  constants.cpp  constants.h  datastructs.h  ellipse.h  gameobject.cpp  gameobject.h  glwidget.cpp  glwidget.h  keys.cpp  keys.h  level.cpp  level.h  light.cpp  light.h  masking.cpp  masking.h  mass.cpp  mass.h  menu.cpp  model3d.cpp  model3d.h  mouse.cpp  mouse.h  object.cpp  object.h  qtgl.cpp  qtgl.h  sphere.cpp  text.cpp  text.h  texture.h  texturecode.cpp  texturecode.h  tga.cpp  tga.h  (+2 more)
game/lib/src/3dsGT/: 3ds.cpp  3ds.h  3dsLoader.cpp  3dsLoader.h
game/lib/src/fmod/: fmod.cpp  fmod.h
game/lib/src/joystick/: joystick.h  resource.h
game/marble/: CMakeLists.txt  commands.cpp  commands.h  glwidget.cpp  glwidget.h  level.cpp  level.h  mainwindow.cpp  marble.pro  marble.qrc
game/marble/Data/model/: map1.3ds  myschool3.3ds
game/racing/: glwidget.cpp  glwidget.h  level.cpp  level.h  mainwindow.cpp  mainwindow.h  meshobject.cpp  meshobject.h  racing.pro
game/racing/data/: track1_4.ogl
game/rubik/: CMakeLists.txt  Lesson5.cpp  cubewindow.cpp  cubewindow.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  rubik.pro  shape.cpp  shape.h
game/ss2/: CMakeLists.txt  camera.cpp  camera.h  characters.h  common.h  frame.h  glwidget.cpp  glwidget.h  keys.cpp  keys.h  level.cpp  level.h  levelwindow.cpp  levelwindow.h  light.h  main.cpp  mainwindow.cpp  mass.cpp  mass.h  matrix3x3.cpp  matrix3x3.h  motion.cpp  motion.h  object.cpp  object.h  qtgl.cpp  qtgl.h  sprite.cpp  sprite.h  ss2.pro  ss2.qrc  textureloader.cpp  textureloader.h  tga.cpp  tga.h  vector2d.cpp  vector2d.h  vector3d.cpp  vector3d.h  vectornd.cpp  (+1 more)
game/ss2/img/characters/: CMakeLists.txt
game/ss2/img/characters/goomba/: CMakeLists.txt  goomba1.tga
game/ss2/img/characters/mario1/: mario.tga
game/ss2/img/characters/mario1little/: CMakeLists.txt  mario.tga  marioJump.tga  marioRun1.tga  marioRun2.tga
game/ss2/img/characters/mmx/: CMakeLists.txt  mmxJump2.tga  mmxJump3.tga  mmxJump4.tga
game/ssgame/: CMakeLists.txt  glwidget.cpp  glwidget.h  levelwindow.cpp  levelwindow.h  mainwindow.cpp  mainwindow.ui  ssgame.pro  ssgame.qrc
game/ssgame/img/characters/goomba/: goomba1.tga
game/ssgame/img/characters/mmx/: mmxAtk1.tga  mmxDuck.tga  mmxHurt2.tga  mmxJumpShoot2.tga  mmxJumpShoot3.tga  mmxJumpShoot5.tga  mmxRun11.tga  mmxRun4.tga  mmxRun5.tga  mmxRunShoot3.tga  mmxRunShoot5.tga  mmxShoot2.tga
game/ssgame/img/characters/zero/: zero.tga  zeroRun1.tga  zeroRun10.tga  zeroRun11.tga  zeroRun2.tga  zeroRun3.tga  zeroRun4.tga  zeroRun5.tga  zeroRun6.tga  zeroRun7.tga  zeroRun8.tga  zeroRun9.tga
game/ssgame/src/: TGA.cpp  TGA.h  Texture Code.cpp  Texture Code.h  animation.cpp  animation.h  dataStructs.cpp  dataStructs.h  error.cpp  error.h  functions.cpp  functions.h  game.cpp  game.h  globalvar.h  headers.cpp  headers.h  keys.cpp  keys.h  level.cpp  level.h  main.cpp  masking.cpp  masking.h  movement.cpp  movement.h  objects.cpp  objects.h  playerkeys.cpp  playerkeys.h  screen.cpp  screen.h  sound.cpp  sound.h  text.cpp  text.h  texturecode.cpp  tga.cpp  tga.h  world.cpp  (+1 more)
game/stick/: glwidget.cpp  glwidget.h  mainwindow.cpp  simulation.cpp  simulation.h  stick.pro
lib/src/: 3ds.cpp  3ds.h  3dsLoader.cpp  CMakeLists.txt  camera.cpp  camera.h  constants.h  datastructs.cpp  datastructs.h  ellipse.cpp  gameobject.cpp  gameobject.h  glwidget.cpp  glwidget.h  keys.h  level.cpp  level.h  masking.cpp  masking.h  mass.cpp  mass.h  menu.cpp  menu.h  model3d.cpp  mouse.cpp  mouse.h  object.cpp  object.h  qtgl.h  quaternion.cpp  quaternion.h  sphere.cpp  sphere.h  text.h  texture.cpp  texture.h  texturecode.cpp  tga.cpp  tga.h  vector3d.cpp  (+1 more)
lib/src/fmod/: fmod.cpp
lib/src/joystick/: joystick.cpp
lib/src/object/: box.cpp  box.h  collection.cpp  collection.h  line.cpp  line.h  lines.cpp  lines.h  object.cpp  object.h  objects.cpp  objects.h  plane.cpp  plane.h  planes.cpp  planes.h  sphere.cpp  sphere.h  spheres.cpp  spheres.h
marble/: CMakeLists.txt  commands.cpp  game.h  glwidget.cpp  glwidget.h  levels.cpp  levels.h  main.cpp  mainwindow.cpp  mainwindow.h  marble.pro  window.cpp  window.h
mobile/bounce/: bounce.pro  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h
mobile/bouncing/: bouncing.pro  main.qml  object_2.cpp  object_2.h  objects.cpp  objects.h  scene.cpp  scene.h  scenerenderer.cpp  scenerenderer.h
racing/: CMakeLists.txt  glwidget.cpp  glwidget.h  level.cpp  level.h  mainwindow.cpp  meshobject.cpp  racing.pro  racing.qrc
racing/data/: mercedes3.ogl
rubik/: CMakeLists.txt  Lesson5.cpp  cubewindow.cpp  mainwindow.h  rubik.pro  shape.cpp
ssgame/: CMakeLists.txt  glwidget.h  levelwindow.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ssgame.qrc
ssgame/img/: watera2.tga  waterb2.tga
ssgame/img/characters/goomba/: goomba2.tga
ssgame/img/characters/mmx/: mmx.tga  mmxHurt1.tga  mmxHurt3.tga  mmxJump1.tga  mmxJump5.tga  mmxJumpShoot1.tga  mmxJumpShoot4.tga  mmxRun1.tga  mmxRun10.tga  mmxRun2.tga  mmxRun3.tga  mmxRun6.tga  mmxRun7.tga  mmxRun8.tga  mmxRun9.tga  mmxRunShoot1.tga  mmxRunShoot2.tga  mmxRunShoot4.tga  mmxShoot1.tga
ssgame/src/: Masterx.cpp  Masterx.h  animation.cpp  animation.h  dataStructs.cpp  functions.cpp  game.cpp  game.h  globalvar.cpp  level.cpp  level.h  movement.cpp  objects.cpp  objects.h  playerkeys.cpp  sound.cpp  test2_private.h  text.cpp  tga.cpp
stick/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  simulation.cpp  simulation.h  stick.pro  window.cpp  window.h
tutorial/HelloGL/: HelloGL.pro  glwidget.cpp  glwidget.h  qtlogo.cpp  qtlogo.h  window.cpp  window.h
tutorial/ModelView/: ModelView.pro  main.cpp  mymodel.cpp  mymodel.h
tutorial/Notepad/: Notepad.pro  moc_notepad.cpp  notepad.cpp  notepad.h  notepad.ui  ui_notepad.h
tutorial/mainwindowexamples/: mainwindow.cpp  mainwindow.h  mainwindowexamples.pro
tutorial/openglwindow/: main.cpp  openglwindow.cpp  openglwindow.h  openglwindow.pro  trianglewindow.cpp  (+1 more)
(+54 files in other folders)
