project(games)

find_package(Qt5Widgets)
find_package(Qt5OpenGL REQUIRED)
find_package(OpenGL REQUIRED)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

if(MSVC)
  add_compile_options(/W2 /WX)
  add_definitions(-D_USE_MATH_DEFINES)
else()
  add_compile_options(-Wall -Wextra -Werror)
  if(NOT WIN32)
    add_compile_options(-fsanitize=address)
    set(CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fsanitize=address")
  endif()
endif()

macro(link_sanitize name)
  if(NOT WIN32 AND NOT MSVC)
    target_link_libraries(${name} -fsanitize=address)
  endif()
endmacro()

add_subdirectory(lib/src)
add_subdirectory(marble)
add_subdirectory(rubik)
add_subdirectory(ssgame)
add_subdirectory(racing)
add_subdirectory(stick)
